# ferrisphone

./: .env.example  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.config/: ferrisphone.toml
.github/workflows/: ci.yaml  release.yaml
docker/: Dockerfile  compose.yaml
src/: handler.rs  main.rs  store.rs
src/store/: config.rs  log.rs  memory.rs  user.rs
